2019-02-14  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* benchtests/bench-memmove.c (do_one_test): Remove unused
	ORIG_SRC.
	(do_test): Adjust.
	* benchtests/bench-memmove-large.c (do_one_test): Remove unused
	ORIG_SRC.
	(do_test): Adjust.

2019-01-13  Jim Wilson  <jimw@sifive.com>

	[BZ #24040]
	* elf/Makefile (CFLAGS-tst-unwind-main.c): Add -DUSE_PTHREADS=0.
	* elf/tst-unwind-main.c: If USE_PTHEADS, include pthread.h and error.h
	(func): New.
	(main): If USE_PTHREADS, call pthread_create to run func.  Otherwise
	call func directly.
	* nptl/Makefile (tests): Add tst-unwind-thread.
	(CFLAGS-tst-unwind-thread.c): Define.
	* nptl/tst-unwind-thread.c: New file.
	* sysdeps/unix/sysv/linux/riscv/clone.S (__thread_start): Mark ra
	as undefined.

2019-02-13  Joseph Myers  <joseph@codesourcery.com>

	* iconvdata/cns11643.h (ucs4_to_cns11643): Adjust fall-through
	comment wording.
	* nis/nis_call.c (__do_niscall3): Likewise.

	* catgets/gencat.c (normalize_line): Use braces around empty
	'else' body.
	* include/stap-probe.h [!USE_STAP_PROBE && !__ASSEMBLER__]
	(STAP_PROBE0): Use do {} while (0) for do-nothing definition.
	[!USE_STAP_PROBE && !__ASSEMBLER__] (STAP_PROBE1): Likewise.
	[!USE_STAP_PROBE && !__ASSEMBLER__] (STAP_PROBE2): Likewise.
	[!USE_STAP_PROBE && !__ASSEMBLER__] (STAP_PROBE3): Likewise.
	[!USE_STAP_PROBE && !__ASSEMBLER__] (STAP_PROBE4): Likewise.
	* libio/libio.h (_IO_funlockfile): Use ((void) 0) for do-nothing
	definition.

	* support/test-container.c (recursive_remove): Use FAIL_EXIT1 if
	execlp returns.

2019-02-12  Wilco Dijkstra  <wdijkstr@arm.com>

	* benchtests/bench-strcasecmp.c (stupid_strcasecmp): Remove.
	* benchtests/bench-strcasestr.c (stupid_strcasestr): Remove.
	* benchtests/bench-strchr.c (stupid_strchr): Remove.
	* benchtests/bench-strcmp.c (stupid_strcmp): Remove.
	* benchtests/bench-strcspn.c (stupid_strcspn): Remove.
	* benchtests/bench-strlen.c (builtin_strlen): Remove.