@@ -1,3 +1,8 @@
+2019-02-14  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* benchtests/Makefile: Add malloc-simple benchmark.
+	* benchtests/bench-malloc-simple.c: New benchmark.
+
 2019-02-14  Siddhesh Poyarekar  <siddhesh@sourceware.org>
 
 	* benchtests/bench-memmove.c (do_one_test): Remove unused
